--- a/day1/jakomo실습.html
+++ b/day1/jakomo실습.html
@@ -10,27 +10,62 @@
             width: 100%;
             display: flex;
         }
-
+        
         .btn {
-            width: 40%;
-            height: 300px;
+            width: 100%;
+            height: 600px;
             background-color: rgb(58, 129, 190);
             position: relative;
         }
 
+        .bg1 {
+            width: 100%;
+            height: 600px;
+            border: 0px solid transparent;
+            background: url(./bg_01.jpg);
+            background-size: cover;
+        }
+
+        .bg2 {
+            width: 100%;
+            height: 600px;
+            border: 0px solid transparent;
+            background: url(./bg_02.jpg);
+            background-size: cover;
+        }
+
+        .bg3 {
+            width: 100%;
+            height: 600px;
+            border: 0px solid transparent;
+            background: url(./bg_03.jpg);
+            background-size: cover;
+        }
+
+        h2 {
+            font-size: 24px;
+            margin: 0;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
         .text {
             position: absolute;
-            height: 300px;
+            width: 100%;
+            height: 500px;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-end;
             color: #fff;
+            text-align: center;
+            margin-bottom: 100px;
         }
 
         .btn:hover {
-            background-size: cover;
-            flex-shrink: 0;
-            transition: 0.3s;
+            transform: scale(1.1);
+            transition: 0.5s;
         }
     </style>
 </head>
@@ -42,18 +77,23 @@
                 <h2>Leather</h2>
                 <p>프리미엄 가죽</p>
             </div>
+                <div class="bg1"></div>
         </div>
+
         <div class="btn">
             <div class="text">
                 <h2>Fabric</h2>
                 <p>기능성 패브릭</p>
             </div>
+            <div class="bg2"></div>
         </div>
+
         <div class="btn">
             <div class="text">
                 <h2>Material</h2>
                 <p>올바른 내장재</p>
             </div>
+            <div class="bg3"></div>
         </div>
     </sections>
 </body>
