--- a/day2/시맨틱태그_구조_실습.html
+++ b/day2/시맨틱태그_구조_실습.html
@@ -30,6 +30,7 @@
         .box {
             display: flex;
             margin: 0 20px;
+            align-items: center;
         }
         .menu_box {
             display: flex;
@@ -120,7 +121,7 @@
 <body>
     <header>
         <div class="box">
-        <div class="logo">LOGO</div>
+        <h1 class="logo">LOGO</h1>
         <nav>
             <ul class="menu_box">
                 <li>
