--- a/day3/가상요소실습_선생님.html
+++ b/day3/가상요소실습_선생님.html
@@ -50,6 +50,29 @@
             transition: 0.3s;
         }
         
+        a::before {
+            content: "";
+            width: 100%;
+            height: 1px;
+            background: #fff;
+            display: block;
+            /* 없으면 안 보임 위치값 설정 */
+            margin-bottom: 16px;
+            transition: 0.3s;
+        }
+
+        a:hover::before {
+            height: 5px;
+        }  
+
+        a span:last-child::after {
+            content: "";
+            width: 100%;
+            height: 1px;
+            background-color: #fff;
+            display: block;
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
