--- a/day10/kakao_실습.html
+++ b/day10/kakao_실습.html
@@ -29,7 +29,7 @@
         .pc_header_top {
             display: flex;
             justify-content: space-between;
-            padding: 16px 32px;
+            padding: 32px 130px;
             align-items: center;
             border-bottom: 0.3px solid #c7c7c7;
         }
@@ -37,7 +37,7 @@
         .pc_header_bottom {
             display: flex;
             justify-content: space-between;
-            padding: 16px 32px;
+            padding: 32px 130px;
             align-items: center;
             border-bottom: 0.3px solid #c7c7c7;
         }
@@ -53,22 +53,24 @@
             font-family: 'NanumSquareNeoLight';
         }
 
-        .menu>li {
+        .menu > li > a {
             padding: 0 16px;
             font-weight: 900;
+            text-decoration: none;
+            color: #000;
+            font-size: 20px
         }
 
         .top_right_box {
             display: flex;
-
         }
 
-        .top_right_box>figure {
-            padding: 10px;
+        .top_right_box > figure {
+            padding: 0 13px;
         }
 
         h2 {
-            font-size: 16px;
+            font-size: 24px;
             font-family: 'NanumSquareNeoExtraBold';
         }
 
@@ -76,6 +78,7 @@
             display: flex;
             list-style: none;
             align-items: center;
+            font-size: 20px;
         }
 
         .bottom_right_box>li {
@@ -92,34 +95,116 @@
             border-left: 0.3px solid #c7c7c7;
             padding-right: 5px;
         }
+
+        /* 모바일 헤더 */
+
+        .mo_header_top {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 0.3px solid #c7c7c7;
+            padding: 30px 160px;
+        }
+
+        .mo_top_right_box{
+            display: flex;
+        }
+
+        .mo_top_right_box > figure {
+            padding: 0 13px;
+        }
+
+        .mo_header_bottom {
+            display: flex;
+            width: 100%;
+            padding: 30px 0;
+            border-bottom: 0.3px solid #c7c7c7;
+        }
+
+        .mo_header_bottom > h2,
+        p {
+            width: 50%;
+        }
+
+        .mo_header_bottom > h2 {
+            padding-left: 200px;
+        }
+
+        .mo_header_bottom > p {
+            text-align: right;
+            padding-right: 200px;
+            font-family: 'NanumSquareNeoExtraBold';
+            font-size: 20px;
+        }
+
+        .mo_header {
+            display: none;
+        }
+
+        @media (max-width: 1160px) {
+            .mo_header {
+                display: block;
+            }
+
+            .pc_header {
+                display: none;
+            }
+        }
+
+        @media (max-width: 760px) {
+            .mo_header_top {
+                padding: 30px 170px;
+            }
+
+            .mo_header_bottom > h2 {
+                padding-left: 180px;
+            }
+
+            .mo_header_bottom > p {
+                padding-right: 180px;
+            }
+        }
     </style>
 </head>
 
 <body>
     <section>
         <header>
+            <!-- PC 헤더 -->
             <div class="pc_header">
                 <div class="pc_header_top">
                     <h1>kakao</h1>
                     <nav>
                         <ul class="menu">
-                            <li>소개</li>
-                            <li>이야기</li>
-                            <li>기술과 서비스</li>
-                            <li>약속과 책임</li>
-                            <li>뉴스</li>
-                            <li>투자정보</li>
+                            <li>
+                                <a href="#">소개</a>
+                            </li>
+                            <li>
+                                <a href="#">이야기</a>
+                            </li>
+                            <li>
+                                <a href="#">기술과 서비스</a>
+                            </li>
+                            <li>
+                                <a href="#">약속과 책임</a>
+                            </li>
+                            <li>
+                                <a href="#">뉴스</a>
+                            </li>
+                            <li>
+                                <a href="#">투자정보</a>
+                            </li>
                         </ul>
                     </nav>
                     <div class="top_right_box">
                         <figure>
-                            <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+                            <i class="fa-solid fa-magnifying-glass fa-2xl"></i>
                         </figure>
                         <figure>
-                            <i class="fa-solid fa-globe fa-lg"></i>
+                            <i class="fa-solid fa-globe fa-2xl"></i>
                         </figure>
                         <figure>
-                            <i class="fa-regular fa-moon fa-lg"></i>
+                            <i class="fa-regular fa-moon fa-2xl"></i>
                         </figure>
                     </div>
                 </div>
@@ -133,10 +218,32 @@
                     </ul>
                 </div>
             </div>
+            <!-- PC 헤더 -->
 
+            <!-- 모바일 헤더 -->
             <div class="mo_header">
-
+                <div class="mo_header_top">
+                    <h1>kakao</h1>
+                    <div class="mo_top_right_box">
+                        <figure>
+                            <i class="fa-solid fa-magnifying-glass fa-2xl"></i>
+                        </figure>
+                        <figure>
+                            <i class="fa-solid fa-burger fa-2xl"></i>
+                        </figure>
+                    </div>
+                </div>
+    
+                <div class="mo_header_bottom">
+                    <h2>카카오톡</h2>
+                    <p>다운로드
+                        <span>
+                            <i class="fa-solid fa-circle-down"></i>
+                        </span>
+                    </p>
+                </div>
             </div>
+            <!-- 모바일 헤더 -->
         </header>
     </section>
 </body>
