--- a/day12/band_clone.html
+++ b/day12/band_clone.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../reset.css"> -->
+    <link rel="stylesheet" href="./band_clone.css">
     <title>band_clone</title>
-    <style>
-        h1 {
-            background: url();
-        }
-    </style>
 </head>
+
 <body>
     <!-- 헤더 -->
     <header>
@@ -38,43 +34,40 @@
         </div>
     </header>
 
-    <!--  -->
         <main>
             <section class="intro_container">
                 <figure>
                     <img src="./bg_intro.jpg" alt="">
                 </figure>
-                <h2>모임이 쉬워진다!
-                    <br>
-                    우리끼리 밴드
-                </h2>
-                <p>당신의 모임도 BAND로 시작하세요.</p>
-                <div class="sign_box">
-                    <div>
-                        <button>
-                            <a href="#">로그인</a>
-                        </button>
+                <div>
+                    <h2>모임이 쉬워진다!
+                        <br>
+                        우리끼리 밴드
+                    </h2>
+                    <p>당신의 모임도 BAND로 시작하세요.</p>
+                    <div class="sign_box">
+                        <div>
+                            <button>
+                                <a href="#">로그인</a>
+                            </button>
+                        </div>
+                        <div>
+                            <button>
+                                <a href="#">회원가입</a>
+                            </button>
+                        </div>
                     </div>
-                    <div>
-                        <button>
-                            <a href="#">회원가입</a>
-                        </button>
+                    <div class="bottom_text">
+                        <p>내게 맞는 밴드를 만나려면
+                            <a href="#">밴드 찾기</a>
+                        </p>
+                        <p>모임별 밴드 활용법
+                            <a href="#">밴드 가이드 보기</a>
+                        </p>
+                        <p>만 13세 미만이라면?
+                            <a href="#">'밴드 키즈' 알아보기</a>
+                        </p>
                     </div>
-                </div>
-                <div class="bottom_text">
-                    <p>내게 맞는 밴드를 만나려면
-                        <a href="#">밴드 찾기</a>
-                    </p>
-                </div>
-                <div class="bottom_text">
-                    <p>모임별 밴드 활용법
-                        <a href="#">밴드 가이드 보기</a>
-                    </p>
-                </div>
-                <div class="bottom_text">
-                    <p>만 13세 미만이라면?
-                        <a href="#">'밴드 키즈' 알아보기</a>
-                    </p>
                 </div>
             </section>
             
@@ -95,7 +88,7 @@
                         <figure>
                             <img src="./img_seo01.jpg" alt="">
                         </figure>
-                        <p>어떤 모임이라도!</p>
+                        <h3>어떤 모임이라도!</h3>
                         <p>친구, 가족, 동료 등 함께 하고 싶은 사람과
                             <br>
                             우리만의 공간을 만들어보세요.</p>
@@ -104,7 +97,7 @@
                         <figure>
                             <img src="./img_seo02.jpg" alt="">
                         </figure>
-                        <p>모임에 딱 맞는 기능들</p>
+                        <h3>모임에 딱 맞는 기능들</h3>
                         <p>투표로 의견을 모으고, 함께 일정을 공유하며
                             <br>
                             게시판과 앨범에는 추억을 쌓아보세요.
@@ -114,7 +107,7 @@
                         <figure>
                             <img src="./img_seo03.jpg" alt="">
                         </figure>
-                        <p>내가 원히는 모임 찾기</p>
+                        <h3>내가 원히는 모임 찾기</h3>
                         <p>취미, 스포츠, 또래 모임 등
                             <br>
                             나와 같은 관심사 밴드를 찾을 수 있어요.
@@ -128,169 +121,31 @@
                     <p>이런 밴드는 어때요
                         <a href="#">모두보기</a>
                     </p>
+                    <!-- p태그 안에 flex > space between -->
                 </div>
                 <ul>
                     <li>
-                        <!-- float 넣기 -->
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
+                        <!-- flex 넣기 -->
+                        <img src="./band_img.png" alt="band_img">
+                        <div>
+                            <h3>밴드 이름</h3>
+                            <p>설명</p>
+                            <div>
+                                <span>멤버수</span>
+                                <span>리더</span>
+                        </div>
+                        <div>
+                            <button>
+                               <a href="#">
+                                        <span>
+                                            주제
+                                        </span>
+                                        밴드 더보기
+                                    </a>
+                            </button>
+                        </div>
                     </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <p>
-                            <a href="#">밴드 이름</a>
-                            <br>
-                            설명
-                            <br>
-                            멤버수·리더
-                        </p>
-                        <button>
-                            <p>
-                                이름
-                                <a href="#">밴드 더보기</a>
-                            </p>
-                        </button>
-                    </li>
+
                 </ul>
             </section>
 
@@ -299,7 +154,7 @@
                     <figure>
                         <img src="" alt="">
                     </figure>
-                    <p>밴드앱을 다운로드 하세요!</p>
+                    <h3>밴드앱을 다운로드 하세요!</h3>
                     <p>당신의 모임도 BAND로 시작하세요.</p>
                 </div>
 
@@ -312,19 +167,71 @@
         </main>
         <footer>
             <ul class="footer_menu">
-                <li>블로그</li>
-                <li>공지사항</li>
-                <li>스티커 제안</li>
-                <li>광고</li>
-                <li>이용약관</li>
-                <li>개인정보처리방침</li>
-                <li>쿠키 설정</li>
-                <li>CCPA 개인 정보 관리</li>
-                <li>청소년 보호를 위한 노력</li>
-                <li>활동정책</li>
-                <li>권리침해 신고안내</li>
-                <li>개발자</li>
-                <li>도움말</li>
+                <li>
+                    <a href="#">
+                        블로그
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        공지사항
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        스티커 제안
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        광고
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        이용약관
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        개인정보처리방침
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        쿠키 설정
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        CCPA 개인 정보 관리
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        청소년 보호를 위한 노력
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        활동정책
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        권리침해 신고안내
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        개발자
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        도움말
+                    </a>
+                </li>
             </ul>
             <p>BAND©2024</p>
         </footer>
