--- a/day12/band_clone.html
+++ b/day12/band_clone.html
@@ -21,12 +21,12 @@
             </select>
             <div class="sign_box">
                 <div>
-                    <button>
+                    <button class="join_btn">
                         <a href="#">회원가입</a>
                     </button>
                 </div>
                 <div>
-                    <button>
+                    <button class="login_btn">
                         <a href="#">로그인</a>
                     </button>
                 </div>
@@ -39,20 +39,20 @@
                 <figure>
                     <img src="./bg_intro.jpg" alt="">
                 </figure>
-                <div>
+                <div class="intro_text">
                     <h2>모임이 쉬워진다!
                         <br>
                         우리끼리 밴드
                     </h2>
                     <p>당신의 모임도 BAND로 시작하세요.</p>
-                    <div class="sign_box">
+                    <div class="intro_sign_box">
                         <div>
-                            <button>
+                            <button class="intro_login_btn">
                                 <a href="#">로그인</a>
                             </button>
                         </div>
                         <div>
-                            <button>
+                            <button class="intro_join_btn">
                                 <a href="#">회원가입</a>
                             </button>
                         </div>
@@ -72,10 +72,12 @@
             </section>
             
             <section class="slogan_container">
-                <!-- 이미지는 bg로 -->
                     <div class="text_box">
-                        <h3>모임을 위한 공간, 밴드</h3>
-                        <p>밴드는 그룹 멤버와 함께 하는 공간입니다.
+                        <h2>
+                            모임을 위한 공간, 밴드
+                        </h2>
+                        <p>
+                            밴드는 그룹 멤버와 함께 하는 공간입니다.
                             <br>
                             동호회, 스터디, 주제별 모임을 밴드로 시작하세요.
                         </p>
@@ -121,13 +123,12 @@
                     <p>이런 밴드는 어때요
                         <a href="#">모두보기</a>
                     </p>
-                    <!-- p태그 안에 flex > space between -->
                 </div>
                 <ul>
                     <li>
                         <!-- flex 넣기 -->
                         <img src="./band_img.png" alt="band_img">
-                        <div>
+                        <div class="band_name_box">
                             <h3>밴드 이름</h3>
                             <p>설명</p>
                             <div>
