--- a/day12/band_clone.html
+++ b/day12/band_clone.html
@@ -15,7 +15,7 @@
         <div class="right_box">
             <select name="lang" size="1">
                 <option value="en">영어</option>
-                <option value="ko">한국어</option>
+                <option value="ko" selected >한국어</option>
                 <option value="ch">중국어</option>
                 <option value="jp">일본어</option>
                 <option value="id">인도네시아어</option>
@@ -128,7 +128,198 @@
                     </div>
                     <ul>
                         <li>
-                            <!-- flex 넣기 -->
+                            <img src="./band_img.png" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>밴드 이름</h3>
+                                <p>설명</p>
+                                <div>
+                                    <span>멤버수</span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>리더</span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                주제
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./band_img.png" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>밴드 이름</h3>
+                                <p>설명</p>
+                                <div>
+                                    <span>멤버수</span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>리더</span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                주제
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./band_img.png" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>밴드 이름</h3>
+                                <p>설명</p>
+                                <div>
+                                    <span>멤버수</span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>리더</span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                주제
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./band_img.png" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>밴드 이름</h3>
+                                <p>설명</p>
+                                <div>
+                                    <span>멤버수</span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>리더</span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                주제
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./band_img.png" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>밴드 이름</h3>
+                                <p>설명</p>
+                                <div>
+                                    <span>멤버수</span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>리더</span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                주제
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./band_img.png" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>밴드 이름</h3>
+                                <p>설명</p>
+                                <div>
+                                    <span>멤버수</span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>리더</span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                주제
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./band_img.png" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>밴드 이름</h3>
+                                <p>설명</p>
+                                <div>
+                                    <span>멤버수</span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>리더</span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                주제
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./band_img.png" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>밴드 이름</h3>
+                                <p>설명</p>
+                                <div>
+                                    <span>멤버수</span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>리더</span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                주제
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
                             <img src="./band_img.png" alt="band_img">
                             <div class="band_name_box">
                                 <h3>밴드 이름</h3>
@@ -158,90 +349,99 @@
             </section>
 
             <section class="download_box">
-                <div>
-                    <figure>
-                        <img src="" alt="">
-                    </figure>
-                    <h3>밴드앱을 다운로드 하세요!</h3>
-                    <p>당신의 모임도 BAND로 시작하세요.</p>
-                </div>
-
-                <div>
-                    <img src="" alt="">
-                    <img src="" alt="">
+                <div class="download_inside_box">
+                    <div class="band_down_box">
+                        <span class="band_img"></span>
+                        <div class="">
+                            <h3>
+                                밴드앱을 다운로드 하세요!
+                            </h3>
+                            <p>
+                                당신의 모임도 BAND로 시작하세요.
+                            </p>
+                        </div>
+                    </div>
+    
+                    <div>
+                        <span class="google_play"></span>
+                        <span class="app_store"></span>
+                    </div>
                 </div>
             </section>
 
         </main>
         <footer>
-            <ul class="footer_menu">
-                <li>
-                    <a href="#">
-                        블로그
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        공지사항
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        스티커 제안
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        광고
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        이용약관
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        개인정보처리방침
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        쿠키 설정
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        CCPA 개인 정보 관리
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        청소년 보호를 위한 노력
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        활동정책
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        권리침해 신고안내
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        개발자
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        도움말
-                    </a>
-                </li>
-            </ul>
-            <p>BAND©2024</p>
+            <div class="footer_box">
+
+                <ul class="footer_menu">
+                    <li>
+                        <a href="#">
+                            블로그
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            공지사항
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            스티커 제안
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            광고
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            이용약관
+                        </a>
+                    </li>
+                    <li>
+                        <a class="information_text" href="#">
+                            개인정보처리방침
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            쿠키 설정
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            CCPA 개인 정보 관리
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            청소년 보호를 위한 노력
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            활동정책
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            권리침해 신고안내
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            개발자
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            도움말
+                        </a>
+                    </li>
+                </ul>
+                <p>BAND©2024</p>
+            </div>
         </footer>
 </body>
 </html>
